# Agent47-Material

./: .gitignore  LICENSE  README.md  data.ipynb  denovo.sbatch  train_abits.sbatch  train_null.sbatch
PGCGM/: PGCGM.ipynb
PGCGM/sh/: gen.sh
PGCGM/ternary_symm_cifs/1/: 102-Sr8YCr8-221-946_1.cif  102-Te8IrI8-221-47_2.cif  102-Y8W8Br-221-450_1.cif  108-AlBiOs-166-337_0.cif  108-AlBiOs-166-337_1.cif  108-AlVIr-166-285_1.cif  108-BHI-167-777_0.cif  108-BHI-167-777_2.cif  108-BaMnNb-167-909_0.cif  108-BaMnNb-167-909_1.cif  108-BaMnNb-167-909_2.cif  108-BaZnRe-167-263_0.cif  108-BeBrCl-166-63_1.cif  (+1400 more)
data/: jarvis_epc_data_2d.json
example_structures/: 132.cif  144.cif  148.cif  160.cif  168.cif  212.cif  216.cif  228.cif  324.cif  336.cif  376.cif  64.cif
flowmm/: .gitignore  denovo.sbatch  ehull.sbatch  environment.yml  prerelaxation.sbatch  run_visualizer.ipynb  sun.sbatch  train.sbatch  train_abits.sbatch  train_flowmm.err  train_flowmm.out  train_null.sbatch
flowmm/abits_params-rfm_cspnet-477idffz/: hparams.yaml
flowmm/remote/DiffCSP-official/: .gitignore  pyproject.toml
flowmm/remote/DiffCSP-official/diffcsp/: eval_utils.py  run.py  script_utils.py
flowmm/remote/DiffCSP-official/diffcsp/common/: data_utils.py  utils.py
flowmm/remote/DiffCSP-official/diffcsp/pl_data/: datamodule.py  dataset.py
flowmm/remote/DiffCSP-official/diffcsp/pl_modules/: gnn.py  model.py
flowmm/remote/DiffCSP-official/scripts/: compute_metrics.py  evaluate.py  generation.py  sample.py
flowmm/scripts_analysis/: ehull.py
flowmm/scripts_model/: run.py
flowmm/wandb/: settings
(+11465 files in other folders)
